k8s/appointments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments
  namespace: hms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointments
  template:
    metadata:
      labels:
        app: appointments
    spec:
      containers:
        - name: appointments
          image: hospitalmanagement-appointments:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: appointments
  namespace: hms-dev
spec:
  selector:
    app: appointments
  ports:
    - port: 8080
      targetPort: 8080
