k8s/command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command
  namespace: hms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command
  template:
    metadata:
      labels:
        app: command
    spec:
      containers:
        - name: command
          image: hospitalmanagement-command:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: command
  namespace: hms-dev
spec:
  selector:
    app: command
  ports:
    - port: 8080
      targetPort: 8080
