k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: hms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: sqldata
              mountPath: /var/opt/mssql
      volumes:
        - name: sqldata
          persistentVolumeClaim:
            claimName: hms-sqldata
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: hms-dev
spec:
  selector:
    app: db
  ports:
    - port: 1433
      targetPort: 1433
