k8s/invoice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoiceservice
  namespace: hms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoiceservice
  template:
    metadata:
      labels:
        app: invoiceservice
    spec:
      containers:
        - name: invoiceservice
          image: hospitalmanagement-invoiceservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: invoiceservice
  namespace: hms-dev
spec:
  selector:
    app: invoiceservice
  ports:
    - port: 8080
      targetPort: 8080
