k8s/queryservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queryservice
  namespace: hms-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queryservice
  template:
    metadata:
      labels:
        app: queryservice
    spec:
      containers:
        - name: queryservice
          image: hospitalmanagement-queryservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: queryservice
  namespace: hms-dev
spec:
  selector:
    app: queryservice
  ports:
    - port: 8080
      targetPort: 8080
