k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hms-ingress
  namespace: hms-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /appointments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointments
                port:
                  number: 8080
          - path: /query(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: queryservice
                port:
                  number: 8080
          - path: /command(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: command
                port:
                  number: 8080
          - path: /invoice(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invoiceservice
                port:
                  number: 8080
